# kuopio-full-body-processing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
C3DParserBulk/: main.cpp
IMUXsensBulkV2/: main.cpp
SignalAlign/: CMakeLists.txt  main.cpp
measurement-config/: anthropometric-descriptions.csv  calibration-descriptions.csv  emg-sensor-mappings.csv  imu-sensor-mappings.csv  movements.csv  optical-marker-bag.csv  optical-marker-participant.csv  optical-marker-tote.csv
scripts/: run-mypy.sh
src/: check_dataset.py  check_emg.py  check_imu_continuity.py  check_imu_length.py  check_imu_marker_correlation.py  check_imu_table_test.py  check_optical_data.py  check_optical_nans.py  correct_datestamps.py  demographic-info.py  generate-readme.py
